--- a/vignettes/tutorial-memory-optimization.Rmd
+++ b/vignettes/tutorial-memory-optimization.Rmd
@@ -46,7 +46,7 @@ For each set of SNPs analyzed together (in a "chunk"), intermediate results must
 ---
 
 <img src="../reference/figures/mme-shared-rvs.png"  width="100%" alt="Multimodal Marginal Epistasis test (MME) schematic pseudo-random vectors" />
-**Schematic overview illustrating the compuational speedup resulting from sharing random vectors. (a)** In the randomized trace estimates we can identify reusable matrix by vector products. Computing the exact trace of a product of two covariance matrices is prohibitively computationally expensive. Instead, the multimodal marginal epistasis (MME) test approximates the traces using random vectors $z$. For the full MQS computation of the point estimates of the variance components, we see that the matrix-by-vector products of the form $Az$ with $A \in \{K, G\}$ appear repeatedly. **(b)** The genetic relatedness matrix $K$ is the same for all focal SNPs. Using unique random vectors in this computation for every focal SNP, we compute the same quantity repeatedly. Computing the matrix-by-vector products $Kz$ constitutes almost half of the computation time of the point estimates. **(c)** By sharing random vectors $z$ between focal SNPs, computing $Kz$ can be done once for all focal SNPs that share random vectors. With this, the computation time of $Kz$ becomes negligible.
+**Figure 1. Schematic overview illustrating the compuational speedup resulting from sharing random vectors. (a)** In the randomized trace estimates we can identify reusable matrix by vector products. Computing the exact trace of a product of two covariance matrices is prohibitively computationally expensive. Instead, the multimodal marginal epistasis (MME) test approximates the traces using random vectors $z$. For the full MQS computation of the point estimates of the variance components, we see that the matrix-by-vector products of the form $Az$ with $A \in \{K, G\}$ appear repeatedly. **(b)** The genetic relatedness matrix $K$ is the same for all focal SNPs. Using unique random vectors in this computation for every focal SNP, we compute the same quantity repeatedly. Computing the matrix-by-vector products $Kz$ constitutes almost half of the computation time of the point estimates. **(c)** By sharing random vectors $z$ between focal SNPs, computing $Kz$ can be done once for all focal SNPs that share random vectors. With this, the computation time of $Kz$ becomes negligible.
 
 ---
 
@@ -56,7 +56,7 @@ Masking genotypes that do not contribute to epistasis can help reduce memory usa
 
 ## Explore the Memory Requirements
 
-To estimate memory needs based on your chosen parameters, use the `approximate_memory_requirements()` function. This function helps you determine if your planned settings will fit within available memory and identify which parameters can be adjusted to meet your resource constraints. The parameters `n_blocks`, `n_randvecs`, and `chunk_size` are particularly flexible and have a significant impact on memory usage.
+To estimate memory needs based on your chosen parameters, use the `approximate_memory_requirements()` function. This function helps you determine if your planned settings will fit within available memory and identify which parameters can be adjusted to meet your resource constraints. The parameters `n_blocks`, `n_randvecs`, and `chunk_size` are particularly flexible and have a significant impact on memory usage. Note however, that it does not account for masking and therefore likely overestimates the required memory.
 
 
 ```{r memory}
@@ -87,3 +87,23 @@ estimated_memory <- parameters %>%
 
 kable(estimated_memory)
 ```
+
+## A Note on the Runtime of MME
+
+Despite the computational efficiency of MME, genome-wide testing requires 
+considerable resources. We recommend to analyze data in batches, and to launch 
+multiple processes simultaneously on a high-performance cluster (HPC).
+In [this study](articles/study-erythroid-differentiation-data.html),
+we analyzed 544k SNPs genotype in 350k individuals. We launched 544 slurm jobs requesting 
+43GB memory and 6 CPUs each to analyze batches of 1000 SNPs with chunk sizes of 250 SNPs.
+Genome-wide testing of a single trait on an HPC with 960
+CPUs and 6840GB of memory available took about 3.5 days.
+
+---
+
+<img src="../reference/figures/mme-runtime.png"  width="100%" alt="Multimodal Marginal Epistasis test (MME) runtime" />
+
+**Figure 2. ** MME has improved power to detect marginal epistasis and runs 10x to 90x faster than state-of-the-art methods.
+The CPU time was measured on 350,000 individuals.
+
+---
