--- a/vignettes/tutorial-simulate-traits.Rmd
+++ b/vignettes/tutorial-simulate-traits.Rmd
@@ -99,4 +99,5 @@ simulate_traits(
 )
 ```
 
+The variance components of the traits are constructed to match the input.
 See Crawford et al. (2017) and [mvMAPIT Documentation: Simulate Traits](https://lcrawlab.github.io/mvMAPIT/articles/tutorial-simulations.html) for a full description of the simulation scheme.
