--- a/vignettes/tutorial-simulate-traits.Rmd
+++ b/vignettes/tutorial-simulate-traits.Rmd
@@ -21,8 +21,11 @@ library(mmer)
 library(genio)
 ```
 
-For a simple illustration, we generate a synthetic allele count matrix with minor allele frequency `maf` greater than 5%. The function `simulate_traits()` requires the input genotype data to be
-stored in the PLINK format (`.bim`, `.bed`, and `.fam` files). Here we use the package `genio` to write
+For a simple illustration, we generate a synthetic allele count matrix with
+minor allele frequency `maf` greater than 5%. The function `simulate_traits()`
+requires the input genotype data to be
+stored in the PLINK format (`.bim`, `.bed`, and `.fam` files). Here we use the
+package `genio` to write
 the allele count matrix to a PLINK file.
 
 
@@ -31,7 +34,8 @@ plink_file <- tempfile()
 n_samples <- 3000
 n_snps <- 5000
 maf <- 0.05 + 0.45 * runif(n_snps)
-random_minor_allele_counts   <- (runif(n_samples * n_snps) < maf) + (runif(n_samples * n_snps) < maf)
+random_minor_allele_counts   <- (runif(n_samples * n_snps) < maf) +
+                                (runif(n_samples * n_snps) < maf)
 allele_count_matrix <- matrix(random_minor_allele_counts,
   nrow = n_samples,
   ncol = n_snps,
@@ -53,8 +57,8 @@ bim <- data.frame(
   id = sprintf("rs%d", 1:n_snps),   # SNP name
   posg = 0,                         # Genetic distance (cM)
   pos = 1:n_snps,          # Base-pair position
-  ref = sample(c("A", "C", "G", "T"), n_snps, replace = T),          # Minor allele
-  alt = sample(c("A", "C", "G", "T"), n_snps, replace = T)         # Major allele
+  ref = sample(c("A", "C", "G", "T"), n_snps, replace = T), # Minor allele
+  alt = sample(c("A", "C", "G", "T"), n_snps, replace = T)  # Major allele
 )
 
 # Write to .bed, .fam, and .bim files
@@ -67,8 +71,8 @@ write_plink(
 ```
 
 
-To simulate traits, we need to specify the genetic architecture. E.g., the function
-requires us to specify 
+To simulate traits, we need to specify the genetic architecture. E.g., the
+function requires us to specify 
 
 - the narrow sense heritability $h^2$
 - the indices SNPs contributing to the narrow sense heritability
@@ -86,7 +90,8 @@ n_snps_gxg_group <- 5
 n_snps_additive <- 100
 additive_snps <- sort(sample(1:n_snps, n_snps_additive, replace = F))
 gxg_group_1 <- sort(sample(additive_snps, n_snps_gxg_group, replace = F))
-gxg_group_2 <- sort(sample(setdiff(additive_snps, gxg_group_1), n_snps_gxg_group, replace = F))
+gxg_group_2 <- sort(sample(setdiff(additive_snps, gxg_group_1), 
+                           n_snps_gxg_group, replace = F))
 
 simulate_traits(
   plink_file,
@@ -100,4 +105,12 @@ simulate_traits(
 ```
 
 The variance components of the traits are constructed to match the input.
-See Crawford et al. (2017) and [mvMAPIT Documentation: Simulate Traits](https://lcrawlab.github.io/mvMAPIT/articles/tutorial-simulations.html) for a full description of the simulation scheme.
+See Crawford et al. (2017) and 
+[mvMAPIT Documentation: Simulate Traits](https://lcrawlab.github.io/mvMAPIT/articles/tutorial-simulations.html)
+for a full description of the simulation scheme.
+
+## SessionInfo
+
+```{r seesionInfo}
+sessionInfo()
+```
